Inclusión del Documento de Referencia de la Orden, editable durente el ciclo de vida. Adicionalmente incluido como filtro de busqueda de Ordenes. Aplica para ClientePrepago y OrdenRecargaPrepago

--- a/Suma2Lealtad/Views/ClientePrepago/DetalleOrden.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/DetalleOrden.cshtml
@@ -49,7 +49,7 @@
                 <br />
             </div>
 
-            <form id="commentForm" method="post" action="@Url.Action("AprobarOrden", "ClientePrepago", new { id = Model.First().idCliente, idOrden = Model.First().idOrden, indicadorGuardar = @indicadorGuardar })" class="form-horizontal">
+            <form id="commentForm" method="post" action="@Url.Action("AprobarOrden", "ClientePrepago", new { id = Model.First().idCliente, idOrden = Model.First().idOrden, indicadorGuardar = @indicadorGuardar })" class="form-horizontal" onsubmit="return actualizarRecargas();">
 
                 <div class="editor-label col-md-4 control-label">
                     Cliente :
@@ -99,6 +99,14 @@
 
                 <div class="editor-form col-md-6">
                     @Html.TextBoxFor(model => model.First().tipoOrden, new { @class = "form-control", @readonly = "true" })
+                </div>
+
+                <div class="editor-label col-md-4 control-label">
+                    Documento de Referencia :
+                </div>
+
+                <div class="editor-form col-md-6">
+                    @Html.TextBoxFor(model => model.First().documentoOrden, new { @class = "form-control Referencia" })
                 </div>
 
                 <div class="editor-field col-md-6">
@@ -155,18 +163,18 @@
                                 <td>
                                     @{if (Model.First().statusOrden == "Nueva")
                                       {
-                                          <p class ="ObservacionesInicial">@Html.DisplayFor(modelItem => Model[i].observacionesExclusion)</p>                                           
-                                          @Html.TextBoxFor(modelItem => Model[i].observacionesExclusion, new { @class = "form-control Observaciones" })                                          
+                                        <p class="ObservacionesInicial">@Html.DisplayFor(modelItem => Model[i].observacionesExclusion)</p>                                           
+                                        @Html.TextBoxFor(modelItem => Model[i].observacionesExclusion, new { @class = "form-control Observaciones" })                                          
                                       }
                                       else if (Model[i].statusDetalleOrden == "Procesado")
                                       {
                                           if (Model[i].resultadoRecarga == "0")
                                           {
-                                            @Html.DisplayFor(modelItem => Model[i].observacionesExclusion) 
+                                        @Html.DisplayFor(modelItem => Model[i].observacionesExclusion) 
                                           }
                                           else
                                           {
-                                            @(String.Format("{0} ({1})", Model[i].observacionesExclusion, Model[i].resultadoRecarga))
+                                        @(String.Format("{0} ({1})", Model[i].observacionesExclusion, Model[i].resultadoRecarga))
                                           }
                                       }
                                       else
@@ -218,6 +226,10 @@
                     <input type="text" id="MontoTotalRecargas" name="MontoTotalRecargas" value="" maxlength="10" class="form-control" readonly="true">
                 </div>
 
+                <div class="editor-form col-md-6">
+                    <input type="text" id="DocumentoReferencia" name="DocumentoReferencia" value="" maxlength="10" class="form-control" style="visibility: hidden">
+                </div>
+
                 <div class="editor-label col-md-4 control-label">
                     <br />
                 </div>
@@ -243,6 +255,10 @@
                           else if (Model.First().statusOrden == "Aprobada")
                           {
                             <a href="@Url.Action("ProcesarOrden", "ClientePrepago", new { id = Model.First().idCliente, idOrden = Model.First().idOrden })" class="btn btn-success btn-md">Procesar Orden</a>
+                          }
+                          else if (Model.First().statusOrden == "Procesada")
+                          {
+                            <input id="Guardar" type="submit" class="btn btn-success btn-md" value="Guardar Orden" />
                           }
                         }
                         <a href="@Url.Action("FilterOrdenes", "ClientePrepago", new { id = Model.First().idCliente })" class="btn btn-danger btn-md">Regresar</a>
@@ -336,11 +352,11 @@
                     case 3:
                         campo4 = $.trim($(this).text());
                         break;
-                    //case 4:
-                    //    if ($(this).children("input").val() != "") {
-                    //        $(this).children("input").show();
-                    //    }
-                    //    break;
+                        //case 4:
+                        //    if ($(this).children("input").val() != "") {
+                        //        $(this).children("input").show();
+                        //    }
+                        //    break;
                 }
             });
             if (campo4 != "Excluido") {
@@ -359,6 +375,8 @@
         }
         document.getElementById('TotalRecargas').value = TotalRecargas;
         document.getElementById('MontoTotalRecargas').value = MontoTotalRecargas.toFixed(2).toString().replace(".", ",");
+        document.getElementById('DocumentoReferencia').value = $(".Referencia").val();
+        return true;
     };
 
 </script>
