--- a/Suma2Lealtad/Views/ClientePrepago/IndexOrdenes.cshtml
+++ b/Suma2Lealtad/Views/ClientePrepago/IndexOrdenes.cshtml
@@ -71,6 +71,7 @@
                         <th>Fecha de Creación</th>
                         <th>Estatus</th>
                         <th>Comentarios</th>
+                        <th>Documento de Referencia</th>
                         <th>Monto Total</th>
                         <th class="text-center"></th>
                         <th class="text-center"></th>
@@ -100,6 +101,10 @@
 
                             <td>
                                 @Html.DisplayFor(modelItem => item.tipoOrden)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.documento)
                             </td>
 
                             <td>
