--- a/Suma2Lealtad/Views/Reporte/FilterReporteCompras.cshtml
+++ b/Suma2Lealtad/Views/Reporte/FilterReporteCompras.cshtml
@@ -69,7 +69,25 @@
                 </div>
 
                 <div class="editor-label col-md-4 control-label">
-                    * Modo de Transacción :
+                    * Fecha desde :
+                </div>
+
+                <div class="editor-field col-md-6">
+                    <input type="text" id="fechadesde" name="fechadesde" maxlength="10" placeholder="dd/mm/aaaa" class="form-control">
+                    <span id="field2"></span>
+                </div>
+
+                <div class="editor-label col-md-4 control-label">
+                    * Fecha hasta :
+                </div>
+
+                <div class="editor-field col-md-6">
+                    <input type="text" id="fechahasta" name="fechahasta" maxlength="10" placeholder="dd/mm/aaaa" class="form-control">
+                    <span id="field3"></span>
+                </div>
+
+                <div class="editor-label col-md-4 control-label">
+                    * Modalidad de Transacciones :
                 </div>
 
                 <div class="editor-field col-md-6">
@@ -80,24 +98,6 @@
                                        Model.ModoTransaccionOptions),
                                        new { @class = "form-control" }
                                        )
-                    <span id="field2"></span>
-                </div>
-
-                <div class="editor-label col-md-4 control-label">
-                    * Fecha desde :
-                </div>
-
-                <div class="editor-field col-md-6">
-                    <input type="text" id="fechadesde" name="fechadesde" maxlength="10" placeholder="dd/mm/aaaa" class="form-control">
-                    <span id="field3"></span>
-                </div>
-
-                <div class="editor-label col-md-4 control-label">
-                    * Fecha hasta :
-                </div>
-
-                <div class="editor-field col-md-6">
-                    <input type="text" id="fechahasta" name="fechahasta" maxlength="10" placeholder="dd/mm/aaaa" class="form-control">
                     <span id="field4"></span>
                 </div>
 
@@ -157,7 +157,7 @@
         var RegExPattern3 = /^([Pp]){1}(-){1}([A-Za-z0-9]){3,10}$/;
         var RegExPattern4 = /^([Pp]){1}([A-Za-z0-9]){3,10}$/;
         if (RegExPattern.test(numdoc) == false && RegExPattern2.test(numdoc) == false && RegExPattern3.test(numdoc) == false && RegExPattern4.test(numdoc) == false) {
-            spanMessage('field1', '* Formato Número de Documento/Cédula Incorrecto. (V-12345678)');
+            spanMessage('field11', '* Formato Número de Documento/Cédula Incorrecto. (V-12345678)');
             document.getElementById('numdoc').value = "";
             document.getElementById('numdoc').focus();
             return false;
@@ -174,7 +174,7 @@
         else if (RegExPattern4.test(numdoc) != false) {
             document.getElementById('numdoc').value = numdoc.substring(0, 1).toUpperCase() + "-" + numdoc.substring(1).toUpperCase();
         }
-        document.getElementById('field1').value = "";
+        LimpiarSpanMessage('field11');
         return true;
     }
 
@@ -186,35 +186,56 @@
         span.appendChild(document.createTextNode(mensaje));
     }
 
-    function validateName() {
-        var name = document.getElementById('name').value;
-        if (name.length == 0)
-            return true;
-        if (!name.match(/^[a-zA-Z''-'\s]*$/)) {
-            spanMessage('field2', '* Formato Nombre Incorrecto.');
-            document.getElementById('name').value = " ";
-            document.getElementById('name').focus();
+    function LimpiarSpanMessage(idelemento) {
+        var span = document.getElementById(idelemento);
+        while (span.firstChild) {
+            span.removeChild(span.firstChild);
+        }
+    }
+
+    function validateFechaDesde() {
+        var fecha = document.getElementById('fechadesde').value;
+        if (fecha.length == 0) {
+            spanMessage('field2', '* Debe ingresar Fecha desde');
+            document.getElementById('fechadesde').focus();
             return false;
         }
+        var RegExPattern = /^([0][1-9]|[12][0-9]|3[01])(\/|-)([0][1-9]|[1][0-2])\2(\d{4})$/;
+        if (RegExPattern.test(fecha) == false) {
+            spanMessage('field2', '* Formato Fecha Incorrecto. (dd/mm/aaaa)');
+            document.getElementById('fechadesde').value = "";
+            document.getElementById('fechadesde').focus();
+            return false;
+        }
+        LimpiarSpanMessage('field2');
         return true;
     }
 
-    function validateEmail() {
-        var email = document.getElementById('email').value;
-        if (email.length == 0)
-            return true;
+    function validateFechaHasta() {
+        var fecha = document.getElementById('fechahasta').value;
+        if (fecha.length == 0) {
+            spanMessage('field3', '* Debe ingresar Fecha hasta');
+            document.getElementById('fechahasta').focus();
+            return false;
+        }
+        var RegExPattern = /^([0][1-9]|[12][0-9]|3[01])(\/|-)([0][1-9]|[1][0-2])\2(\d{4})$/;
+        if (RegExPattern.test(fecha) == false) {
+            spanMessage('field3', '* Formato Fecha Incorrecto. (dd/mm/aaaa)');
+            document.getElementById('fechahasta').value = "";
+            document.getElementById('fechahasta').focus();
+            return false;
+        }
+        LimpiarSpanMessage('field3');
         return true;
     }
 
     function validateForm() {
-        //if (validateNumDoc() && validateName() && validateEmail()) {
-        //    return true;
-        //}
-        //else {
-        //    return false;
-        //}
-
-        return true;
+        if (validateNumDoc() && validateFechaDesde() && validateFechaHasta()) {
+            return true;
+        }
+        else {
+            return false;
+        }
     }
 
 </script>
