R5 Para Pruebas Iniciales

--- a/Suma2Lealtad/Views/AfiliadoSuma/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/Acreditar.cshtml
@@ -61,13 +61,13 @@
                     <span id="monto"></span>
                 </div>
 
-                <div class="editor-label col-md-4 control-label">
+                @*<div class="editor-label col-md-4 control-label">
                     Observaciones :
                 </div>
                 <div class="editor-field col-md-6">
                     @Html.TextBox("Observaciones", "", new { @class = "form-control" })
                     <span id="observaciones"></span>
-                </div>
+                </div>*@
 
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
