--- a/Suma2Lealtad/Views/AfiliadoSuma/Index.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/Index.cshtml
@@ -115,7 +115,7 @@
                     <a id="SuspenderTarjeta" class="btn btn-success btn-md" role="button">Suspender Tarjeta</a>
                     <a id="ReactivarTarjeta" class="btn btn-success btn-md" role="button">Reactivar Tarjeta</a>
                     <a id="SaldosMovimientos" class="btn btn-success btn-md" role="button">Saldos y Movimientos</a>
-                    @*<a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>*@
+                    <a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>
                 </div>
                 <div class="pull-right">
                     <a href="@Url.Action("Filter", "AfiliadoSuma")" class="btn btn-success btn-md">Agregar Nuevo Beneficiario</a>
@@ -149,7 +149,7 @@
         $("#SuspenderTarjeta").hide();
         $("#ReactivarTarjeta").hide();
         $("#SaldosMovimientos").hide();
-        //$("#Acreditar").hide();
+        $("#Acreditar").hide();
     });
 
     $('.table tbody tr td:not(:last-child)').click(function () {
@@ -169,7 +169,7 @@
         $("#SuspenderTarjeta").hide();
         $("#ReactivarTarjeta").hide();
         $("#SaldosMovimientos").hide();
-        //$("#Acreditar").hide();
+        $("#Acreditar").hide();
 
         if (statusAfiliacion == "Nueva") {
         }
@@ -188,7 +188,7 @@
             }
             $("#SuspenderTarjeta").show();
             $("#SaldosMovimientos").show();
-            //$("#Acreditar").show();
+            $("#Acreditar").show();
         }
         else if (statusAfiliacion == "Activa" && statusTarjeta == "Suspendida") {
             $("#CrearPin").show();
