--- a/Suma2Lealtad/Views/BeneficiarioPrepago/SilverlightImpresora.cshtml
+++ b/Suma2Lealtad/Views/BeneficiarioPrepago/SilverlightImpresora.cshtml
@@ -7,7 +7,7 @@
     InitParams = InitParams + "," + "Track1=" + Model.Afiliado.trackI;
     InitParams = InitParams + "," + "Track2=" + Model.Afiliado.trackII;
     InitParams = InitParams + "," + "TipoTarjeta=" + Model.Afiliado.type;
-    InitParams = InitParams + "," + "Corporacion=" + "Corporacion";
+    InitParams = InitParams + "," + "Corporacion=" + Model.Cliente.nameCliente;
     InitParams = InitParams + "," + "FechaVencimiento=" + "12-99";
     InitParams = InitParams + "," + "idElementoHtmlControl=ElementoControl";   
 }
