--- a/Suma2Lealtad/Views/Home/Login.cshtml
+++ b/Suma2Lealtad/Views/Home/Login.cshtml
@@ -41,7 +41,7 @@
         </div>
                         
         <div class="editor-field col-md-4" style="margin-top: 80px;" aria-required="true">
-            <input class="form-control" placeholder="Usuario" name="username" value="ddepablos" type="text" required="">
+            <input class="form-control" placeholder="Usuario" name="username" value="" type="text" required="">
             <br>
             <input class="form-control" placeholder="Contraseña" name="password" value="123456" type="password" required="">
             <br>
