--- a/Suma2Lealtad/Views/Reporte/FilterReporteRecargas.cshtml
+++ b/Suma2Lealtad/Views/Reporte/FilterReporteRecargas.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Suma2Lealtad.Models.ReportePrepago
 
 @{
-    ViewBag.Title = "FilterReview";
+    ViewBag.Title = "Prepago / Reportes / Reporte de Recargas";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
