--- a/Suma2Lealtad/Views/AfiliadoSuma/SilverlightImpresora.cshtml
+++ b/Suma2Lealtad/Views/AfiliadoSuma/SilverlightImpresora.cshtml
@@ -7,7 +7,7 @@
     InitParams = InitParams + "," + "Track1=" + Model.trackI;
     InitParams = InitParams + "," + "Track2=" + Model.trackII;
     InitParams = InitParams + "," + "TipoTarjeta=" + Model.type;
-    InitParams = InitParams + "," + "Corporacion=" + "Corporacion";
+    InitParams = InitParams + "," + "Corporacion=" + "";
     InitParams = InitParams + "," + "FechaVencimiento=" + "12-99";
     InitParams = InitParams + "," + "idElementoHtmlControl=ElementoControl";   
 }
@@ -33,4 +33,5 @@
     //        slcontrol3.Content.MainPage.LimpiarErrores();
     //    }
     //}
+
 </script>
